--- a/public/422.html
+++ b/public/422.html
@@ -3,65 +3,85 @@
 <head>
   <title>The change you wanted was rejected (422)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
   <style>
   .rails-default-error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
-    margin: 0;
+    margin: 0; 
+    display: block;
   }
 
   .rails-default-error-page div.dialog {
     width: 95%;
-    max-width: 33em;
+    max-width: 50em;
     margin: 4em auto 0;
   }
 
   .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    text-align: center;
+    
+    padding: 20px;
   }
 
   .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
+    font-size: 50px;
+    color: #306486c0;
     line-height: 1.5em;
+    font-family: 'Staatliches', cursive;
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .rails-default-error-page p {
+   color: rgb(255, 145, 77);
+   font-family: 'Archivo Black', sans-serif;
   }
+
+  .rails-default-error-page div.dialog > img {
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  }
+  .rails-default-error-page div.dialog > button {
+    border-radius: 4px;
+    padding: 15px;
+    background-color: rgba(255, 145, 77, 0.411); 
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border: none;
+    margin-bottom: 10px;
+    margin-top: -30px;
+  }
+
+  .rails-default-error-page div.dialog button > a {
+    font-family: 'Staatliches', cursive;
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+  }
+  .rails-default-error-page div.dialog button > a:hover {
+    font-size: 22px;
+  }
+
   </style>
 </head>
 
 <body class="rails-default-error-page">
-  <!-- This file lives in public/422.html -->
+  <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
+      <h1>The change you wanted was rejected :(</h1>
       <p>Maybe you tried to change something you didn't have access to.</p>
+
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <br>
+    <button><a href="/spots">Back to spots</a></button> 
+    <br>
+    <img src="https://www.surfertoday.com/images/stories/surfingmeme2.jpg" />
+    
+  
   </div>
 </body>
 </html>
+
