--- a/public/422.html
+++ b/public/422.html
@@ -7,67 +7,67 @@
   <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
   <style>
-  .rails-default-error-page {
+  .error-page {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
     font-family: arial, sans-serif;
-    margin: 0; 
+    margin: 0;
     display: block;
   }
 
-  .rails-default-error-page div.dialog {
+  .error-page div.dialog {
     width: 95%;
     max-width: 50em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .error-page div.dialog > div {
     text-align: center;
-    
+
     padding: 20px;
   }
 
-  .rails-default-error-page h1 {
+  .error-page h1 {
     font-size: 50px;
     color: #306486c0;
     line-height: 1.5em;
     font-family: 'Staatliches', cursive;
   }
 
-  .rails-default-error-page p {
+  .error-page p {
    color: rgb(255, 145, 77);
    font-family: 'Archivo Black', sans-serif;
   }
 
-  .rails-default-error-page div.dialog > img {
+  .error-page div.dialog > img {
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
   }
-  .rails-default-error-page div.dialog > button {
+  .error-page div.dialog > button {
     border-radius: 4px;
     padding: 15px;
-    background-color: rgba(255, 145, 77, 0.411); 
+    background-color: rgba(255, 145, 77, 0.411);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border: none;
     margin-bottom: 10px;
     margin-top: -30px;
   }
 
-  .rails-default-error-page div.dialog button > a {
+  .error-page div.dialog button > a {
     font-family: 'Staatliches', cursive;
     text-decoration: none;
     color: black;
     font-size: 20px;
   }
-  .rails-default-error-page div.dialog button > a:hover {
+  .error-page div.dialog button > a:hover {
     font-size: 22px;
   }
 
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="error-page">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
@@ -76,11 +76,11 @@
 
     </div>
     <br>
-    <button><a href="/spots">Back to spots</a></button> 
+    <button><a href="/spots">Back to spots</a></button>
     <br>
     <img src="https://www.surfertoday.com/images/stories/surfingmeme2.jpg" />
-    
-  
+
+
   </div>
 </body>
 </html>
